fix(enhancers): Made position dependent on where you click enhancers from, if mobile, setting floating to true. hide scrollbars in chrome. #SA-187 and #AP-112. (#286)

--- a/components/tailored/messaging/enhancers/Enhancers.less
+++ b/components/tailored/messaging/enhancers/Enhancers.less
@@ -1,9 +1,10 @@
 #enhancers {
   height: @enhancers-height;
-  width: @enhancers-width;
+  max-width: @enhancers-width;
   position: absolute;
-  right: @normal-spacing;
-  bottom: @chatbar-size;
+  margin-left: @normal-spacing;
+  right: @normal-spacing !important;
+  bottom: @chatbar-size !important;
   margin-bottom: @light-spacing;
   border-radius: @corner-rounding;
   background: @semitransparent-light-gradient;
@@ -17,6 +18,9 @@
     width: 100%;
     height: calc(100% - 3rem);
     overflow-y: scroll;
+  }
+  #container::-webkit-scrollbar {
+    display: none;
   }
   .navbar {
     width: 100%;
